# wikidata-to-surrealdb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DockerFile  Makefile  README.md  Useful queries.md  docker-compose-surrealdb.dev.yml  docker-compose-surrealdb.yml  docker-compose.dev.yml  docker-compose.yml  flake.nix  justfile
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.forgejo/workflows/: crane.yml  docker.yml
.github/workflows/: crane.yml  docker.yml
benches/: bench.rs
src/: main.rs  utils.rs
src/utils/: init_backoff.rs  init_db.rs  init_progress_bar.rs  init_reader.rs  tables.rs
tests/: integration.rs
tests/data/: Entity.json  Property.json  test_filter.surql
