[package]
name = "wikidata-to-surrealdb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.2.1", features = ["protocol-http", "kv-mem"] }
tokio = { version = "1.43", features = ["fs", "time", "sync"] }
futures = "0.3"
wikidata = "1.1"
bzip2 = { version = "0.4", features = ["tokio"] }
indicatif = "0.17"
rand = "0.8"
backon = { version = "1.4", features = ["tokio-sleep"] }

[dev-dependencies]
rstest = "0.22"
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "protobuf-codec"] }

[[bench]]
name = "bench"
harness = false
